@@ -244,6 +244,7 @@ void av_register_all(void)
     REGISTER_DEMUXER  (SUBVIEWER, subviewer);
     REGISTER_MUXDEMUX (SWF, swf);
     REGISTER_DEMUXER  (TAK, tak);
+    REGISTER_DEMUXER  (TEDCAPTIONS, tedcaptions);
     REGISTER_MUXER    (TG2, tg2);
     REGISTER_MUXER    (TGP, tgp);
     REGISTER_DEMUXER  (THP, thp);
